fixed the setuptabs bug