@@ -102,18 +102,19 @@
                 <mainClass>com.cjme.motorphsystem.Main</mainClass>
             </configuration>
         </plugin>
-        
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-        <source>23</source>
-        <target>23</target>
-        <release>23</release>
+          <source>23</source>
+          <target>23</target>
+          <release>23</release>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
-      
     </plugins>
     </build>
 
